Bug 566462: Eliminate deprecated network-oriented API
Device contributions should now extend DefaultGDBJtagConnectionImpl and
provide default connection details in the JTagDevice extension
declaration.

Launch configurations providing legacy connection data (ipAddress and
portNumber) are accommodated at launch and upgraded to use connection
URIs when edited.

Change-Id: I36b5d3e49f1d8f0becf1b898b7a48eb239453f1b